mudança das capas dos cases

--- a/abandono.html
+++ b/abandono.html
@@ -141,16 +141,16 @@
             <div id="container">
                 <div class="case">
                     <article class="simulador">
-                        <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
+                        <img src="image/ui-aplicado.webp" alt="Capa do case abandono de carrinho">
                         <h2>Simulador de compra</h2>
-                        <a href="pages/abandono.html" target="_blank" rel="noopener noreferrer">Confira o case completo</a>
+                        <a href="simulador.html" target="_blank" rel="noopener noreferrer">Confira o case completo</a>
                     </article>
                 </div>
                 <div class="case">
                     <article class="evento">
                         <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
                         <h2>Plataforma de eventos online</h2>
-                        <a href="pages/abandono.html" target="_blank" rel="noopener noreferrer">Confira o case completo</a>
+                        <a href="abandono.html" target="_blank" rel="noopener noreferrer">Confira o case completo</a>
                     </article>
                 </div>
             </div>
