--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="case">
                     <article class="simulador">
-                        <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
+                        <img src="image/ui-aplicado.webp" alt="Capa do case abandono de carrinho">
                         <h2>Simulador de compra</h2>
                         <p>Este case mostra como adaptamos métodos de teste de usabilidade ao ambiente remoto durante a pandemia, para melhorar um sistema interno da AmBev voltado à simulação e compra de insumos. O processo incluiu uma Design Sprint, e um Focus Group remoto, onde clientes testaram o e deram feedback em tempo real.</p>
                         <a href="simulador.html">Confira o case completo</a>
