--- a/simulador.html
+++ b/simulador.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de compra</title>
-    <link rel="stylesheet" href="style/abandono.css">
+    <link rel="stylesheet" href="style/simulador.css">
     <meta name="description" content="Projeto feito de sistema de simulação de compra de insumos para produção de cerveja na Ambev.">
     <link rel="shortcut icon" href="/image/logo.svg" type="image/x-icon">
 </head>
@@ -189,15 +189,15 @@
                 <div class="case">
                     <article class="simulador">
                         <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
-                        <h2>Simulador de compra</h2>
-                        <a href="pages/abandono.html" target="_blank" rel="noopener noreferrer">Confira o case completo</a>
+                        <h2>Abandono de carrinho</h2>
+                        <a href="abandono.html" target="_blank" rel="noopener noreferrer">Confira o case completo</a>
                     </article>
                 </div>
                 <div class="case">
                     <article class="evento">
                         <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
                         <h2>Plataforma de eventos online</h2>
-                        <a href="pages/abandono.html" target="_blank" rel="noopener noreferrer">Confira o case completo</a>
+                        <a href="abandono.html" target="_blank" rel="noopener noreferrer">Confira o case completo</a>
                     </article>
                 </div>
             </div>
