Ajustes de links

--- a/simulador.html
+++ b/simulador.html
@@ -190,14 +190,14 @@
                     <article class="simulador">
                         <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
                         <h2>Abandono de carrinho</h2>
-                        <a href="abandono.html" target="_blank" rel="noopener noreferrer">Confira o case completo</a>
+                        <a href="abandono.html">Confira o case completo</a>
                     </article>
                 </div>
                 <div class="case">
                     <article class="evento">
-                        <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
+                        <img src="image/capa-plataforma.jpg" alt="Capa do case abandono de carrinho">
                         <h2>Plataforma de eventos online</h2>
-                        <a href="abandono.html" target="_blank" rel="noopener noreferrer">Confira o case completo</a>
+                        <a href="plataforma.html">Confira o case completo</a>
                     </article>
                 </div>
             </div>
