--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                 </div>
                 <div class="case">
                     <article class="evento">
-                        <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
+                        <img src="image/capa-plataforma.jpg" alt="Capa do case abandono de carrinho">
                         <h2>Plataforma de eventos online</h2>
                         <p>Este case mostra como adaptamos métodos de teste de usabilidade ao ambiente remoto durante a pandemia, para melhorar um sistema interno da AmBev voltado à simulação e compra de insumos. O processo incluiu uma Design Sprint, e um Focus Group remoto, onde clientes testaram o e deram feedback em tempo real.</p>
-                        <a href="pages/abandono.html">Confira o case completo</a>
+                        <a href="plataforma.html">Confira o case completo</a>
                     </article>
                 </div>
             </div>
