--- a/simulador.html
+++ b/simulador.html
@@ -6,7 +6,7 @@
     <title>Simulador de compra</title>
     <link rel="stylesheet" href="style/simulador.css">
     <meta name="description" content="Projeto feito de sistema de simulação de compra de insumos para produção de cerveja na Ambev.">
-    <link rel="shortcut icon" href="/image/logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="image/logo.svg" type="image/x-icon">
 </head>
 <body>
     <header>
