--- a/abandono.html
+++ b/abandono.html
@@ -18,9 +18,9 @@
             </a>
             <nav id="menu">
                 <ul>
-                    <li><a href="#projects">Projetos</a></li>
-                    <li><a href="#terceiro">Profissional</a></li>
-                    <li><a href="#about">Sobre</a></li>
+                    <li><a href="index.html#projects">Projetos</a></li>
+                    <li><a href="index.html#terceiro">Profissional</a></li>
+                    <li><a href="index.html#about">Sobre</a></li>
                 </ul>
             </nav>
         </div>
