Add mediaquery mobile

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <th scope="col">Empresa</th>
                             <th scope="col">Período</th>
                             <th scope="col">Cargo</th>
-                            <th scope="col">Função</th>
+                            <th scope="col" class="function">Função</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -86,7 +86,7 @@
                             <td>Vetta</td>
                             <td class="period">de <em>05/2024</em> <br> até <em>01/2025</em></td>
                             <td>Product Designer Sênior</td>
-                            <td>
+                            <td class="function">
                                 <ul>
                                     <li><span>Desenvolvi novas funcionalidades para sistemas de simulações voltados à eficiência energética;</span></li>
                                     <li><span>Atuei na inovação de processos siderúrgicos, assegurando maior eficiência operacional;</span></li>
@@ -100,7 +100,7 @@
                             <td>Ahgora <br>by TOTVS</td>
                             <td class="period">de <em>08/2023</em> <br> até <em>05/2024</em></td>
                             <td>Product Designer Sênior</td>
-                            <td>
+                            <td class="function">
                                 <ul>
                                     <li><span>Melhorei fluxos e interfaces em sistemas de tratativas de pontos e faltas;</span></li>
                                     <li><span>Realizei análise de dados usando ferramentas como Metabase e Clarity para usabilidade;</span></li>
@@ -114,7 +114,7 @@
                             <td>Hurb</td>
                             <td class="period">de <em>11/2021</em> <br> até <em>05/2023</em></td>
                             <td>Product Designer Pleno</td>
-                            <td>
+                            <td class="function">
                                 <ul>
                                     <li><span>Desenvolvi fluxos e interfaces para produtos na área de atividades turísticas;</span></li>
                                     <li><span>Realizei análise de usabilidade e identificação de pontos de abandono de compra;</span></li>
@@ -128,7 +128,7 @@
                             <td>Delivery Much</td>
                             <td class="period">de <em>11/2020</em> <br> até <em>11/2021</em></td>
                             <td>Product Designer Pleno</td>
-                            <td>
+                            <td class="function">
                                 <ul>
                                     <li><span>Desenhei fluxos e jornadas de usuário para migração de sistemas de cadastro de lojas;</span></li>
                                     <li><span>Conduzi testes de usabilidade para validar novas funcionalidades em ambiente ágil;</span></li>
@@ -142,7 +142,7 @@
                             <td>Catarinas Design</td>
                             <td class="period">de <em>04/2019</em> <br> até <em>11/2020</em></td>
                             <td>UX/UI Designer</td>
-                            <td>
+                            <td class="function">
                                 <ul>
                                     <li><span>Conduzi projetos completos desde a pesquisa até a entrega final de protótipos;</span></li>
                                     <li><span>Realizei entrevistas e análises de dados para suporte à criação de soluções inovadoras;</span></li>
