Ajuste no período da trajetória profissional
Decidi remover o "de" para falicitar também para a versão mobile

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <tbody>
                         <tr>
                             <td>Vetta</td>
-                            <td class="period">de <em>05/2024</em> <br> até <em>01/2025</em></td>
+                            <td class="period"><em>05/2024</em> <br> até <em>01/2025</em></td>
                             <td>Product Designer Sênior</td>
                             <td class="function">
                                 <ul>
@@ -98,7 +98,7 @@
                         </tr>
                         <tr>
                             <td>Ahgora <br>by TOTVS</td>
-                            <td class="period">de <em>08/2023</em> <br> até <em>05/2024</em></td>
+                            <td class="period"><em>08/2023</em> <br> até <em>05/2024</em></td>
                             <td>Product Designer Sênior</td>
                             <td class="function">
                                 <ul>
@@ -112,7 +112,7 @@
                         </tr>
                         <tr>
                             <td>Hurb</td>
-                            <td class="period">de <em>11/2021</em> <br> até <em>05/2023</em></td>
+                            <td class="period"><em>11/2021</em> <br> até <em>05/2023</em></td>
                             <td>Product Designer Pleno</td>
                             <td class="function">
                                 <ul>
@@ -126,7 +126,7 @@
                         </tr>
                         <tr>
                             <td>Delivery Much</td>
-                            <td class="period">de <em>11/2020</em> <br> até <em>11/2021</em></td>
+                            <td class="period"><em>11/2020</em> <br> até <em>11/2021</em></td>
                             <td>Product Designer Pleno</td>
                             <td class="function">
                                 <ul>
@@ -140,7 +140,7 @@
                         </tr>
                         <tr>
                             <td>Catarinas Design</td>
-                            <td class="period">de <em>04/2019</em> <br> até <em>11/2020</em></td>
+                            <td class="period"><em>04/2019</em> <br> até <em>11/2020</em></td>
                             <td>UX/UI Designer</td>
                             <td class="function">
                                 <ul>
