--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
                         <h2>Abandono de carrinho</h2>
                         <p>Projeto realizado para o site de compra de atividades para o Hurb, uma das maiores agencias de viagem online do Brasil. Este projeto apresento um pouco sobre meu processo de trabalho e como solucionamos o problema de abandono de carrinho e uma melhoria de conversão de quase 65%.</p>
-                        <a href="abandono.html" rel="noopener noreferrer">Confira o case completo</a>
+                        <a href="abandono.html">Confira o case completo</a>
                     </article>
                 </div>
                 <div class="case">
